# spotmicro_walkwithesp32

./: .gitignore  CLAUDE.md  README.md  package.json
algorithms/: README.md
algorithms/gait/: Makefile.gait_test  README.md  gait_test  gait_test.cpp
algorithms/kinematics/: Makefile.kinematics_test  esp_log.h
doc/: README.md
doc/01_系统架构/: ESP32工程合并方案.md
doc/02_运动学公式/: 逆运动学公式推导.md
doc/03_硬件相关/: 舵机校准指南.md
docs/: 03_04_analysis.md  ESP-IDF安装与编译方案.md
kinematics_test_standalone/: KINEMATICS_TEST_README.md  kinematics_test  kinematics_test_main.cpp
kinematics_test_standalone/kinematics/: KinematicsGeometry.cpp  KinematicsGeometry.hpp  LegKinematics.cpp
kinematics_test_standalone/tests/: KinematicsTestFramework.cpp
memory/: 2026-03-20.md
spot_micro_body_control_sim/: README.md
spot_micro_body_control_sim/01_leg_kinematics/: TEST_RESULTS.md  kinematics_app.py  run_lab.py
spot_micro_body_control_sim/01_spot_micro_leg_kinematics_lab/: README.md  __init__.py  kinematics_core.py  kinematics_visualizer.py
spot_micro_body_control_sim/02_simulator_standalone/: CODE_ANALYSIS.md
spot_micro_body_control_sim/02_spot_micro_simulator_standalone/: README.md  complete_quadruped_world_control.py
spot_micro_body_control_sim/03_gait_control/: .gitignore  README.md  TEST_FIX_GUIDE.md  demo_turning_methods.py  demo_velocity_control.py
spot_micro_body_control_sim/03_spot_micro_simulator_framework/: analyze_world_frame.py  final_verification.py  gait_animation_demo.py  gait_animation_demo_v2.py  gait_animation_demo_v3.py  gait_animation_demo_v4.py  gait_animation_demo_v6.py  plot_gait_trajectory.py  plot_gait_trajectory_v2.py  plot_leg_phases.py  plot_trajectory_simple.py  robot_animation.py  screenshot_robot.py  support_legs_result.txt  test_walk_gait.py  verify_duty_cycle.py  verify_trajectory.py  步态修正计划.md  运行指南.md
spot_micro_body_control_sim/04_spot_micro_gait_control/: .gitignore  README.md
spot_micro_body_control_sim/simulator_app/: README.md  analyze_gait.py  gait_animation_demo_v5.py  plot_gait_trajectory_fixed.py  run_spot_micro.py
spot_micro_esp32/: README.md
spot_micro_esp32/01_test_pca9685_standalone/: CMakeLists.txt  build.sh  (+1 more)
spot_micro_esp32/01_test_pca9685_standalone/main/: CMakeLists.txt  main.cpp
spot_micro_esp32/01_test_pca9685_standalone/main/drivers/: PCA9685Driver.hpp  test_pca9685_driver_refactored.cpp
spot_micro_esp32/01_test_pca9685_standalone/main/utils/: Logger.hpp  UartTerminal.cpp
spot_micro_esp32/02_test_servo_angle_control/main/: CMakeLists.txt  RobotTypes.hpp  main.cpp
spot_micro_esp32/02_test_servo_angle_control/main/drivers/: PCA9685Driver.cpp  test_servo_angle_control.cpp
spot_micro_esp32/03_test_joint_controller/main/: CMakeLists.txt  main.cpp  test_joint_controller.cpp
spot_micro_esp32/03_test_joint_controller/main/config/: MappingConfig.hpp  SmoothMotionConfig.hpp
spot_micro_esp32/03_test_joint_controller/main/controllers/: JointController.hpp  SmoothMotionController.cpp
spot_micro_esp32/03_test_joint_controller/main/kinematics/: Leg.cpp  QuadrupedModel.cpp
spot_micro_esp32/03_test_joint_controller/main/utils/: UartTerminal.cpp
spot_micro_esp32/05_test_smooth_motion_controller/main/: CMakeLists.txt  main.cpp  test_smooth_motion_controller.cpp
spot_micro_esp32/05_test_smooth_motion_controller/main/controllers/: JointController.cpp  JointSmoother.hpp
spot_micro_esp32/05_test_smooth_motion_controller/main/drivers/: ServoDriver.cpp  ServoDriver.hpp
spot_micro_esp32/05_test_smooth_motion_controller/main/kinematics/: CoordinateTransform.cpp  KinematicsGeometry.hpp
spot_micro_esp32/06_body_control_uart/main/: CMakeLists.txt  pca9685Test.cpp
spot_micro_esp32/06_body_control_uart/main/config/: ConfigManager.cpp  ConfigManager.hpp  ServoConfig.hpp
spot_micro_esp32/06_body_control_uart/main/controllers/: PoseInterpolator.hpp  RobotController.cpp  SmoothMotionController.cpp
spot_micro_esp32/06_body_control_uart/main/kinematics/: KinematicsGeometry.cpp  Leg.hpp  QuadrupedModel.cpp
spot_micro_esp32/06_body_control_uart/main/utils/: Logger.cpp  UartTerminal.hpp
spot_micro_esp32/07_body_control_web/main/: CMakeLists.txt  CMakeLists.txt.test  i2c_diagnostic.cpp  i2c_diagnostic.h  pca9685Test.cpp  robot_bridge.cpp  robot_bridge.h  simple_test_main.cpp  web_server_adapter.c  websocket_handler.c  websocket_handler.h
spot_micro_esp32/07_body_control_web/main/config/: ConfigManager.cpp
spot_micro_esp32/07_body_control_web/main/controllers/: GaitController.hpp  JointController.cpp  JointSmoother.cpp  PoseInterpolator.cpp  RobotController.cpp  RobotController.hpp  SmoothMotionController.hpp  gait_web_handler.cpp
spot_micro_esp32/07_body_control_web/main/drivers/: PCA9685Driver.cpp  ServoDriver.cpp  ServoDriver.hpp
spot_micro_esp32/07_body_control_web/main/gait/: GaitTypes.hpp
spot_micro_esp32/07_body_control_web/main/http_server/: gait_control.html
spot_micro_esp32/07_body_control_web/main/kinematics/: Leg.cpp  LegKinematics.hpp  QuadrupedModel.cpp  QuadrupedModel.hpp
spot_micro_esp32/07_body_control_web/main/utils/: UART_Refactor_Summary.md  UartTerminal_Usage.md
spot_micro_esp32/07_body_control_web/main/web/: index.html
(+110 files in other folders)
